2008-11-19  Paweł Sałek

	* configure.in: detect gnome-keyring-2.24 to work around bug 556530.
	* libbalsa/{imap-,}server.c: store passwords asap to keyring (Peter B.).
	* libbalsa/server.h: use own schema only with buggy gnome-keyring.

2008-11-17  Peter Bloomfield

	* src/main-window.c: make "about" website clickable.

2008-11-17  Paweł Sałek

	* src/{folder,mailbox}-conf.c: capitalize according to HID.
	* src/{balsa-app,pref-manager}.c: ditto.
	* libbalsa/identity.c: ditto.
	* configure.in: gnome-keyring detection.
	* libbalsa/smtp-server.c: store server protocol.
	* libbalsa/imap-server.c: read password from keyring.
	* libbalsa/server.[ch]: ditto.

2008-11-16  Paweł Sałek

	* src/balsa-mime-widget-{message,text}.c: fall back to gnome_url_Show
	if gtk2 >= 2.14.0 is unavailable.
	* src/sendmsg-window.c: ditto.

2008-11-15  Peter Bloomfield

	Use gtk_show_uri instead of gnome_help_display and
	gnome_url_show, in various places; no longer need to include
	<gnome.h> in as many places.

	* libbalsa/identity.c: (help_ident_cb): replace
	gnome_help_display and gnome_url_show with gtk_show_uri.
	* libbalsa/smtp-server.c: (smtp_server_response): ditto.
	* src/address-book-config.c: (help_button_cb): ditto.
	* src/balsa-message.c: ditto.
	* src/balsa-mime-widget-callbacks.c: ditto.
	* src/balsa-mime-widget-message.c: (extbody_call_url): ditto.
	* src/balsa-mime-widget-text.c: (handle_url),
	(balsa_gtk_html_link_clicked): ditto.
	* src/filter-edit-callbacks.c: (condition_dialog_response),
	(fe_dialog_response): ditto.
	* src/filter-run-callbacks.c: (fr_dialog_response): ditto.
	* src/folder-conf.c: (folder_conf_response): ditto.
	* src/main-window.c: ditto.
	* src/message-window.c: ditto.
	* src/pref-manager.c: (balsa_help_pbox_display): ditto.
	* src/sendmsg-window.c: (on_open_url_cb): ditto.
	* src/toolbar-prefs.c: (tp_dialog_response_cb): ditto.
	* src/balsa-app.h: do not include <gnome.h>
	* src/balsa-index.h: ditto.
	* src/balsa-message.h: ditto.