@@ -1,3 +1,11 @@
+2008-11-21  Paweł Sałek
+
+	* src/save-restore.c: connect signal to ask interactively for SMTP
+	passwords.
+	* src/balsa-app.c: display the type of the password (imap/smtp).
+	* libbalsa/smtp-server.c: ask for password when one needs one.
+
+
 2008-11-19  Paweł Sałek
 
 	* configure.in: detect gnome-keyring-2.24 to work around bug 556530.
